--- a/index.html
+++ b/index.html
@@ -327,21 +327,21 @@
     <!-- Footer Start -->
     <div class="container-fluid bg-dark text-white mt-5 py-5 px-sm-3 px-md-5" id="contacto">
         <div class="row pt-5">
-            <div class="col-lg-3 col-md-6 mb-5">
+            <div class="col-lg-4 col-md-6 mb-5">
                 <a href="index.html" class="navbar-brand">
                     <h3 class="m-0 mt-n3 display-4 text-primary">Pharm <br /> Human</h3>
                 </a>
                 <p class="text-muted" style="text-align:justify;">Soluciones estratégicas y personalizadas en administración, organización y desarrollo empresarial.</p>
                 
             </div>
-            <div class="col-lg-3 col-md-6 mb-5">
+            <div class="col-lg-4 col-md-6 mb-5">
                 <h4 class="font-weight-semi-bold text-primary mb-4">Contáctanos</h4>
-                <p class="text-muted"><i class="fa fa-map-marker-alt text-primary mr-2"></i>123 Street, New York, USA</p>
-                <p class="text-muted"><i class="fa fa-phone-alt text-primary mr-2"></i>+012 345 67890</p>
+                <!--<p class="text-muted"><i class="fa fa-map-marker-alt text-primary mr-2"></i>123 Street, New York, USA</p>
+                <p class="text-muted"><i class="fa fa-phone-alt text-primary mr-2"></i>+012 345 67890</p>-->
                 <p class="text-muted"><i class="fa fa-envelope text-primary mr-2"></i>info@pharmhuman.com</p>
                
             </div>
-            <div class="col-lg-3 col-md-6 mb-5">
+            <div class="col-lg-4 col-md-6 mb-5">
                 <h4 class="font-weight-semi-bold text-primary mb-4">Accesos Directos</h4>
                 <div class="d-flex flex-column justify-content-start">
                     <a class="text-muted mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Home</a>
