--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                 <h4 class="font-weight-semi-bold text-primary mb-4">Contáctanos</h4>
                 <!--<p class="text-muted"><i class="fa fa-map-marker-alt text-primary mr-2"></i>123 Street, New York, USA</p>
                 <p class="text-muted"><i class="fa fa-phone-alt text-primary mr-2"></i>+012 345 67890</p>-->
-                <p class="text-muted"><i class="fa fa-envelope text-primary mr-2"></i>info@pharmhuman.com</p>
+                <p class="text-muted"><i class="fa fa-envelope text-primary mr-2"></i>preguntas@pharmhuman.com.mx</p>
                
             </div>
             <div class="col-lg-4 col-md-6 mb-5">
